@@ -1,3 +1,9 @@
+2011-03-23  Mike Frysinger  <vapier@gentoo.org>
+
+	* config/bfin-parse.y (SEARCH): Return yyerror when dest reg $2 is
+	the same as dest reg $4.
+	(BITMUX): Return yyerror when dest reg $3 is the same as dest reg $5.
+
 2011-03-23  Eric B. Weddington  <eric.weddington@atmel.com>
 
 	* config/tc-avr.c (mcu_types): Add new xmega devices: atxmega64a1u,
